--- a/webClient/style/join-room.css
+++ b/webClient/style/join-room.css
@@ -91,3 +91,10 @@
     color: #333;
     font-family: 'Hanalei Fill', cursive;
 }
+
+.join-room .game-content{
+    position: relative;
+    left: 50%;
+    top: 76px;
+    transform: translateX(-50%);
+}
